2005-05-16  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/main.cc (setup_paths)[ARGV0_RELOCATION]: 

2005-05-16  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* lily/horizontal-bracket.cc (print): Take care of the direction
	property so brackets above the stave point downwards. 

	* scm/define-grobs.scm (all-grob-descriptions): Set staff-padding
	for HorizontalBracket so it doesn't end up within the stave.

2005-05-16  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/GNUmakefile (default): Typo.

	* scm/lily.scm (PLATFORM): Export.

	* scm/framework-ps.scm (write-preamble)[MINGW]: Use
	load-font-via-GS, ttftool or fopencookie is broken on windows.
	
	* scm/backend-library.scm (postscript->pdf)[MINGW]: Do not use
	-dSAFER, that is broken on windows.

2005-05-15  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/GNUmakefile ($(outdir)/FlexLexer.h): conditional dependency
	for FlexLexer.h

	* scripts/lilypond-invoke-editor.scm: remove stray -

2005-05-15  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/lily-guile.cc (ly_scm2newstr): Use scm_i_string_length.
	Fixes deprecation warning.

	* flower/include/string.icc (to_string): Only inline if
	-DSTRING_UTILS_INLINED.

	* lily/pango-font.cc (pango_item_string_stencil): Normalize file
	name.  Remove windows comment.

	* scm/editor.scm (slashify): New function.
	(get-editor-command): Use it.
	(get-command-template): Do not alter editor command if
	environment value includes `%(file)s' magic.

	* scripts/lilypond-invoke-editor.scm (unquote-uri): New function.
	(dissect-uri): Use it.
	(unquote-uri): Bugfix.

2005-05-15  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/framework-ps.scm (write-preamble): add TTF rule.

	* Documentation/topdocs/README.texi (Top): remove note about
	xdelta.

	* Documentation/topdocs/INSTALL.texi (Top): remove Flex
	requirement.

	* stepmake/aclocal.m4: STEPMAKE_FLEXLEXER_LOCATION: new
	function. Figure out where FlexLexer.h lives

	* lily/GNUmakefile (OUT_DIST_FILES): dist lexer.cc and FlexLexer.h
	